JavaDoc ServizioCollezioneStatistiche