@@ -1,22 +1,36 @@
 package gruppo2.service;
 
-
 import gruppo2.Document;
 import javafx.concurrent.Service;
 import javafx.concurrent.Task;
 
 import java.util.*;
-import java.util.stream.Collectors;
 
+/**
+ * La classe CollectionStatisticsService estende Service<String> e fornisce un servizio per calcolare le statistiche
+ * di una collezione di documenti. Le statistiche includono il numero totale di parole, il numero di frasi,
+ * il numero di documenti e le 5 parole più comuni nell'intera collezione.
+ */
 public class CollectionStatisticsService extends Service<String> {
     private List<Document> documents;
     private Map<Document, Map<String, Integer>> resultMapByDocument;
 
+    /**
+     * Costruttore della classe CollectionStatisticsService.
+     *
+     * @param documents              La lista di documenti da analizzare.
+     * @param resultMapByDocument    Una mappa che associa ogni documento alla sua mappa di conteggio delle parole.
+     */
     public CollectionStatisticsService(List<Document> documents, Map<Document, Map<String, Integer>> resultMapByDocument) {
         this.documents = documents;
         this.resultMapByDocument = resultMapByDocument;
     }
 
+    /**
+     * Metodo che crea un task per il calcolo delle statistiche della collezione.
+     *
+     * @return Un Task che, quando eseguito, calcola le statistiche della collezione di documenti.
+     */
     @Override
     protected Task<String> createTask() {
         return new Task<>() {
@@ -62,7 +76,7 @@ public class CollectionStatisticsService extends Service<String> {
                 List<Map.Entry<String, Integer>> commonWords = globalWordCount.entrySet().stream()
                         .sorted(Map.Entry.comparingByValue(Comparator.reverseOrder()))
                         .limit(5)
-                        .collect(Collectors.toList());
+                        .toList();
 
                 // Creazione del messaggio di statistica
                 StringBuilder statsMessage = new StringBuilder();
